# TE3003B

./: .gitignore  .gitmodules
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
kalman_notebooks/: kalman.ipynb
notebooks/: create_map.py  slam.ipynb  test_slam.py
notebooks/slam/: dataset.py  fast_slam.py  likelihood_field.py  map.py  occupancy_grid.py  particle.py  scan.py
puzzlebot_dashboard/: package-lock.json  package.json
puzzlebot_dashboard/src/app/: LidarDisplay.js  page.js
puzzlebot_dashboard/src/app/datos/: page.js
puzzlebot_dashboard/src/app/imagen/: page.js
src/arucos_detect/: CMakeLists.txt  package.xml
src/arucos_detect/launch/: arucos_detect.launch.py
src/arucos_detect/scripts/: aruco_node.py  camera_info.py
src/arucos_detect/yaml/: ost.yaml
src/arucos_interfaces/: CMakeLists.txt  package.xml
src/arucos_interfaces/msg/: ArucoMarkers.msg  ArucosDetected.msg  Gripper.msg
src/custom_msgs/: CMakeLists.txt  package.xml
src/puzzlebot_control/: CMakeLists.txt  package.xml
src/puzzlebot_control/action/: Gripper.action
src/puzzlebot_control/config/: point.yaml  points.yaml
src/puzzlebot_control/launch/: control.launch.py  puzzlebot.launch.py  sim.launch  sim.launch.py
src/puzzlebot_control/rviz/: urdf.rviz
src/puzzlebot_control/scripts/: .gripper_test.py.swm  .gripper_test.py.swn  .gripper_test.py.swo  .gripper_test.py.swp  bug.py  bug0_node.py  cmd_vel_node.py  ekf_slam.py  gripper_action_client.py  gripper_action_server.py  gripper_test.py  master_controller.py  potential_node.py  set_point.py
src/puzzlebot_control/src/: controller_node.cpp  gripper_test.py  joint_state_publisher_node.cpp  kinematic_sim.cpp  odom_node.cpp  odometry_node.cpp  odometry_node.py  potential_field_node.cpp
src/puzzlebot_control/srv/: ResetPosition.srv
src/puzzlebot_control/urdf/: puzzlebot.urdf
src/puzzlebot_interfaces/: CMakeLists.txt  package.xml
src/puzzlebot_interfaces/msg/: StateControllerStatus.msg
src/puzzlebot_ros/: LICENSE  README.md  package.xml  setup.cfg  setup.py
src/puzzlebot_ros/gazebo/: world_aruco_cv.sdf  world_aruco_mip.sdf  world_box.sdf  world_empty.sdf  world_obstacle_avoidance_2.sdf
src/puzzlebot_ros/gazebo/aruco000/: model.config  model.sdf
src/puzzlebot_ros/gazebo/aruco000/meshes/: aruco000.dae
src/puzzlebot_ros/gazebo/aruco000_cv/: model.config  model.sdf
src/puzzlebot_ros/gazebo/aruco000_cv/meshes/: aruco000.dae
src/puzzlebot_ros/gazebo/aruco001/: model.config  model.sdf
src/puzzlebot_ros/gazebo/aruco001/meshes/: aruco001.dae
src/puzzlebot_ros/gazebo/aruco001_cv/: model.config  model.sdf
src/puzzlebot_ros/gazebo/aruco001_cv/meshes/: aruco001.dae
src/puzzlebot_ros/gazebo/aruco002/: model.config  model.sdf
src/puzzlebot_ros/gazebo/aruco002/meshes/: aruco002.dae
src/puzzlebot_ros/gazebo/aruco002_cv/: model.config  model.sdf
src/puzzlebot_ros/gazebo/aruco002_cv/meshes/: aruco002.dae
src/puzzlebot_ros/gazebo/aruco003/: model.config  model.sdf
src/puzzlebot_ros/gazebo/aruco003/meshes/: aruco003.dae
src/puzzlebot_ros/gazebo/aruco003_cv/: model.config  model.sdf
src/puzzlebot_ros/gazebo/aruco003_cv/meshes/: aruco003.dae
src/puzzlebot_ros/gazebo/avoidance_world_2/: model.config  model.sdf
src/puzzlebot_ros/gazebo/avoidance_world_2/meshes/: wall_1.dae  wall_2.dae  wall_3.dae  wall_4.dae  wall_5.dae  wall_6.dae
src/puzzlebot_ros/gazebo/box_brick/: model.config  model.sdf
src/puzzlebot_ros/gazebo/box_brick/meshes/: box_brick.dae
src/puzzlebot_ros/gazebo/box_sim/: model.config  model.sdf
src/puzzlebot_ros/gazebo/box_sim/meshes/: box_brick.dae
src/puzzlebot_ros/gazebo/puzzlebot/: model.config  model.sdf
src/puzzlebot_ros/gazebo/puzzlebot/meshes/: box1-5.blend  box13_16.blend  box1_4.blend1  box5_8.blend  box5_8.blend1  box9_12.blend  wheel.blend  wheel.blend1  wheel.dae  world_wall1.blend  world_wall1.blend1
src/puzzlebot_ros/gazebo/puzzlebot_camera/: model.sdf
src/puzzlebot_ros/gazebo/puzzlebot_complete/: model.config  model.sdf
src/puzzlebot_ros/gazebo/puzzlebot_lidar/: model.config  model.sdf
src/puzzlebot_ros/gazebo/world_wall/: model.config  model.sdf
src/puzzlebot_ros/gazebo/world_wall/meshes/: world_wall1.dae
src/puzzlebot_ros/launch/: aruco_gazebo.launch.py  aruco_jetson.launch.py  aruco_raspberry.launch.py  camera_jetson.launch.py  gazebo_aruco_world.launch.py  gazebo_box_world.launch.py  gazebo_empty_world.launch.py  gazebo_obstacle_avoidance_2_world.launch.py  goto_deadreckoning.launch.py  goto_kalman.launch.py  micro_ros_agent.launch.py
src/puzzlebot_ros/puzzlebot_ros/: dead_reckoning.py  distance_control.py  goto_point.py  kalman.py  my_math.py  pwm_control.py  velocity_control.py
src/puzzlebot_rpc_bridge/: CMakeLists.txt  build_go.sh  build_go_proto.sh  gateway.go  go.mod  go.sum  package.xml  proto  video_pub.py
src/puzzlebot_rpc_bridge/proto/: CMakeLists.txt  RobotState.grpc.pb.cc  RobotState.grpc.pb.h  RobotState.pb.cc  RobotState.pb.go  RobotState.pb.gw.go  RobotState.proto  RobotState_grpc.pb.go
src/puzzlebot_rpc_bridge/scripts/: build_protos.sh  rpc_bridge.py  video_pub.py
src/puzzlebot_rpc_bridge/scripts/proto/: CMakeLists.txt  RobotState.grpc.pb.h  RobotState.pb.go  RobotState.pb.gw.go  RobotState.pb.h  RobotState.proto  RobotState_grpc.pb.go  RobotState_pb2.py  RobotState_pb2.pyi  RobotState_pb2_grpc.py
src/puzzlebot_rpc_bridge/scripts/proto/google/api/: annotations_pb2_grpc.py  http_pb2_grpc.py
src/puzzlebot_rpc_bridge/src/: rpc_bridge.cpp
src/ros_deep_learning/launch/: video_source.ros2.launch
src/ros_deep_learning/src/: node_video_source.cpp
src/slm_sim/launch/: pendulum_sim.launch
src/slm_sim/scripts/: slm_sim.py
src/slm_sim/urdf/: pendulum.urdf
